--- a/app/globals.css
+++ b/app/globals.css
@@ -929,7 +929,7 @@
 
   body {
     @apply font-walsheim;
-    background: var(--container-1);
+    background: var(--background-quaternary);
   }
 
   code {
