--- a/app/globals.css
+++ b/app/globals.css
@@ -315,7 +315,7 @@
     --radius-2xl: var(--_sizes-4);
     --radius-3xl: var(--_sizes-5);
     --radius-4xl: var(--_sizes-6);
-    --radius-full: 999;
+    --radius-full: 999px;
   }
 
   :root.light {
